@@ -19,7 +19,7 @@
     <div class="nice-padding">
         <h2>Contents</h2>
         <nav>
-            <ul class="unlist">
+            <ul class="w-pl-0">
                 <li><a href="#typography">Typography</a></li>
                 <li><a href="#help">Help text</a></li>
                 <li><a href="#listings">Listings</a></li>
@@ -594,7 +594,7 @@
                 }
             </style>
 
-            <ul class="unlist">
+            <ul class="w-list-none">
                 <li>{% icon 'wagtail-icon' %} wagtail</li>
                 <li>{% icon 'wagtail-inverse' %} wagtail-inverse</li>
                 <li>{% icon 'cogs' %} cogs</li>
